Fix forked environment